# horus

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  _quarto.yml  index.qmd  pyproject.toml  references.qmd
.devin/rules/: adapt-from-all.md  horus-config-discipline.md  horus-decision-discipline.md  issue-project-assignment-required.md  l1-canonical-paths.md  no-half-knowledge.md  no-quantity-over-shape.md  no-terminal-oneline-scripts.md  no-time-estimates.md  sprint-review-prompt.md  uv-discipline.md
.devin/skills/literature-review/: SKILL.md
.github/workflows/: ci.yml
.streamlit/: config.toml
.windsurf/: phases.yaml
.windsurf/rules/: anti-laziness-core-principles.md  be-honest-direct-critical.md  bidirectional-learning-pipe.md  branch-and-pr-required.md  clean-project-structure.md  context7-and-docs-first.md  document-as-you-go.md  horus-config-discipline.md  horus-source-archival.md  know-your-hardware.md  long-running-foreground.md  make-sure-it-works.md  notebook-discipline.md  obsidian-context-priming.md  plan-drift-watcher.md  strict-docs-placement.md
.windsurf/skills/run-experiment/: SKILL.md
app/: Home.py  __init__.py  loaders.py
app/assets/brand/: README.md
app/components/: __init__.py  cards.py  charts.py  field_table.py  theme.py
app/data/: __init__.py  approaches.py  fields.py  heldout.py  invoices.py  metrics.py  mlflow_store.py  results.py
app/views/: __init__.py  approach_comparison.py  heldout_review.py  invoice_explorer.py  live_extraction.py
configs/: README.md  arm-a.yaml  arm-b.yaml  baseline-regex.yaml  cohort-smoke.yaml  eda-cord-v2.yaml  eda-fatura2.yaml  eda-funsd.yaml  eda-inv-cdip-tobacco.yaml  eda-omnidocbench.yaml  eda-parsee-ai.yaml  eda-zugferd.yaml  h8-efficiency.yaml  json-baseline.yaml  pilot-13-dev-2x2.yaml  pilot-13-dev-mlx.yaml  pilot-13-dev.yaml  pilot-13-eval.yaml  pilot-13-structured-probe-native-json.yaml  pilot-13-structured-probe-uniform.yaml  pilot-13.yaml
data/: README.md
docs/: structure.md
docs/architecture/: README.md  belege-heldout-datasheet.md  data-flow.example.mmd  invoice-field-model.md  system-overview.example.mmd
docs/decisions/: ADR-001-tool-decision-discipline.md  ADR-002-source-archival.md  ADR-003-brand-naming-horus.md  ADR-004-config-library.md  ADR-005-synthetic-invoice-generator.md  ADR-006-visual-pdf-renderer.md  ADR-007-inference-framework-dual-track.md  ADR-008-orchestrated-baseline.md  ADR-009-pilot-vlm-cohort.md  ADR-010-xml-extraction-script.md  ADR-011-experiment-tracker-integration.md  ADR-012-cii-ground-truth-parser.md  ADR-013-vlm-prediction-scorer.md  ADR-014-cohort-harness-multipage.md  ADR-015-mlflow-ui-makefile-wire.md  ADR-016-fast-dev-config-adapter-iterate.md  ADR-017-timing-tokens-memory-instrumentation.md  ADR-018-structured-output-probe.md  ADR-019-probe-bug-catalog.md  ADR-020-probe-rescore-methodology.md  ADR-021-probe-verdict-matrix-amendments.md  ADR-022-scripts-directory-status.md  ADR-023-ci-pipeline.md  ADR-024-eda-visualization-stack.md  ADR-025-eda-multi-dataset-book-structure.md  ADR-026-cohort-dashboard-tui.md  ADR-027-f1-metric-expansion.md  ADR-028-money-field-belegsummen-adapter.md  ADR-029-json-baseline-hnd1.md  ADR-030-reading-ceiling-approach-gate.md  ADR-031-hypothesis-label-reconciliation.md  ADR-032-h8-efficiency-sweep.md  ADR-033-zugferd-v1-parser.md  ADR-034-heldout-eval-strategy.md  ADR-035-canonical-schema-extension.md  ADR-036-streamlit-observability-app.md  ADR-037-closed-milestone-baseline-freeze.md  ADR-038-readstructure-orchestration-mechanism.md  ADR-039-live-extraction-demo-page.md  ADR-040-heldout-belege-gt.md  (+14 more)
docs/handoffs/: INDEX.md  schema-step1-coding-handoff.md  schema-step1-fields-empty-investigation.md
docs/prompts/stages/: 01-literature.md  02-brainstorm.md  04-experiments.md
docs/retros/: full-coverage-schema.md  m2d.5-mid-heartbeat-2026-05-19.md  m2d.5-pilot-13-cohort-harness.md  m2d.5-step3-dataset-acquisition.md  m2d.5-structured-output-probe.md
docs/sources/: README.md  json-baseline-metrics.txt
docs/sources/articles/: 2025-json-prompting-failure-rate.md  2026-llamacpp-vs-mlx-apple-silicon.md
docs/sources/datasets/: aoschu-german-invoices.md  cord-v2.md  fattural.md  fatura2-invoices.md  funsd.md  (+8 more)
eval/: README.md  probe-rescore-arm-a.txt  probe-rescore-arm-b.txt  probe-verdict-matrix.md  reading-ceiling-and-approach-comparison.md
experiments/: 01-zugferd.py  02-fatura2.py  03-omnidocbench.py  04-funsd.py  05-parsee-ai.py  06-cord-v2.py  07-inv-cdip-tobacco.py  08-cross-corpus.py  A1-datasheets.qmd  arm-b-structurer-probe.py  eda-zugferd.py
notebooks/: README.md
scripts/: README.md  ablation_threshold.py  cohort_smoke.py  compute_probe_verdict.py  data_manifest.py  error_analysis.py  extract_zugferd_xml.py  generate_datasheets.py  generate_zugferd_smoke.py  heldout_manifest.py  inference_smoke.py  inspect_arms.py  inspect_pilot_13.py  orchestrated_smoke.py  prepare_brand_assets.py  reading_ceiling.py  rescore.py  run_arm_b.py  run_pilot_13.py  validate_zugferd.py
src/horus/: __init__.py  config.py  seeding.py  tracking.py  vlm_extractor.py  zugferd_render.py
src/your_pkg/: __init__.py  config.py  seeding.py  tracking.py
tests/: _corpus.py  conftest.py  test_adapters.py  test_adapters_json.py  test_anls.py  test_app_data.py  test_arm_b.py  test_config_eda.py  test_config_eval.py  test_config_pilot_13.py  test_dashboard.py  test_eda_cord_v2_loader.py  test_eda_corpus_walk.py  test_eda_datasheet.py  test_eda_fatura2_loader.py  test_eda_figures.py  test_eda_funsd_loader.py  test_eda_inv_cdip_loader.py  test_eda_omnidocbench_loader.py  test_eda_parsee_ai_loader.py  test_eda_zugferd_loader.py  test_extract_zugferd_xml.py  test_ground_truth.py  test_harness.py  test_heldout.py  test_inference_smoke.py  test_inspect_pilot_13.py  test_live.py  test_orchestrated_smoke.py  test_probe_verdict.py  test_rasterize.py  test_reading_ceiling.py  test_rescore.py  test_schema.py  test_scorer.py  test_scorer_integration.py  test_scorer_integration_multipage.py  test_smoke.py  test_structurer.py  test_tracking.py  (+3 more)
(+363 files in other folders)
