[project]
name = "horus"
version = "0.1.0"
description = "HORUS — Hybrid OCR-free Reading & Understanding System. Privacy-first document intelligence for German tax/accounting professionals via local vision-language models. Master's thesis (FH Wedel, SS 2026)."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Proprietary — All rights reserved (thesis project)" }
authors = [
    { name = "Reebal Sami" },
]
dependencies = [
    "addict>=2.4.0",
    "docling>=2.93.0",
    "einops>=0.8.2",
    "factur-x>=4.2",
    "fpdf2>=2.8.7",
    "matplotlib>=3.10.9",
    "mineru>=3.1.11",
    "mlflow>=3.7",
    "mlx-vlm>=0.5.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdfium2>=4.30,<5",
    "pyyaml>=6.0.3",
    "torch>=2.5",
    "torchvision>=0.20",
    "transformers>=5.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.7",
    "mypy>=1.13",
    "jupytext>=1.16",
    "papermill>=2.6",
    "types-pyyaml>=6.0.12.20260510",
]

[build-system]
requires = ["uv_build>=0.5"]
build-backend = "uv_build"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.mypy]
# B1=A per python-ml-uv brainstorm: mypy is the default type checker.
# Loose lower-bound pin; consumer adds plugins (pydantic / torch / numpy) as needed.
python_version = "3.14"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = []

# Optional ML deps that the scaffold imports conditionally (try/except ImportError).
# Without these overrides, mypy fails on the conditional import even though
# the runtime path is correct. Consumer adds rows here when adopting more
# optional deps under the same try/except pattern.
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
ignore_missing_imports = true

# ADR-005 deps (factur-x ships no py.typed; lxml has community lxml-stubs but
# project precedent is the override pattern over an extra dev dep).
[[tool.mypy.overrides]]
module = ["facturx", "lxml"]
ignore_missing_imports = true

# ADR-006: fpdf2 ships no py.typed; imports as the package name `fpdf` (legacy from PyFPDF).
[[tool.mypy.overrides]]
module = ["fpdf", "fpdf.*"]
ignore_missing_imports = true

# ADR-007: mlx-vlm 0.5.0 ships no py.typed; transformers DOES ship py.typed since 4.43
# (no override needed for transformers itself).
[[tool.mypy.overrides]]
module = ["mlx_vlm", "mlx_vlm.*"]
ignore_missing_imports = true

# ADR-008: docling ships py.typed (no override needed); mineru does NOT ship py.typed.
[[tool.mypy.overrides]]
module = ["mineru", "mineru.*"]
ignore_missing_imports = true

# ADR-011: mlflow 3.12.0 ships no py.typed; same override pattern as factur-x / fpdf / mineru / mlx_vlm.
[[tool.mypy.overrides]]
module = ["mlflow", "mlflow.*"]
ignore_missing_imports = true

# ADR-014: pypdfium2 4.30 ships no py.typed marker (`__file__` resolves to
# `pypdfium2._helpers.document` — internal submodule structure but no public
# typing surface). Same override pattern as factur-x / fpdf / mineru / mlx_vlm / mlflow.
[[tool.mypy.overrides]]
module = ["pypdfium2", "pypdfium2.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
# ADR-022: repo root on sys.path during pytest sessions so `from scripts import X`
# resolves without per-file sys.path manipulation. Paths are relative to rootdir
# (the directory containing this pyproject.toml).
pythonpath = ["."]
# ADR-023 (post first-CI-run redesign): the `requires_corpus` marker was deleted
# in favour of `pytest.mark.skipif`-based gating via `tests/_corpus.py` —
# `skip_if_no_corpus` + `skip_if_no_fixtures` decorators. Per pytest's official
# recommendation ("It is better to use the pytest.mark.skipif marker when
# possible to declare a test to be skipped under certain conditions like
# mismatching platforms or dependencies."). No marker registration needed.
